kyverno-policies/custom-3.2.4.yaml
../policies/kubernetes/worker-nodes/custom-3.2.4.yaml
