tests/custom-3.2.4/noncompliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-3.2.4-noncompliant
policies:
  - ../../../kyverno-policies/custom-3.2.4.yaml
resources:
  - node.yaml
results:
  - policy: custom-3-2-4-read-only-port
    rule: check-read-only-port
    resources:
      - noncompliant-node
    kind: Node
    result: fail
